--- a/CaseManagement/Areas/Identity/Pages/Account/Manage/MyCases.cshtml
+++ b/CaseManagement/Areas/Identity/Pages/Account/Manage/MyCases.cshtml
@@ -5,7 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.MyCases;
 }
 
-<partial name="CasesTablePartial" , model="Model.outputModel" />
+<partial name="CasesTablePartial" , model="@Model.OutputModel" />
 
 @* pagination *@
 @{
@@ -13,22 +13,22 @@
     // Note that, when this is used the page number is also passed after it in the format: &page=X
     var parameters = new
     {
-        orderBy = Model.outputModel.OrderedBy,
-        selectedStatuses = Model.outputModel.SelectedStatuses,
-        selectedPriorities = Model.outputModel.SelectedPriorities
+        orderBy = Model.OutputModel.OrderedBy,
+        selectedStatuses = Model.OutputModel.SelectedStatuses,
+        selectedPriorities = Model.OutputModel.SelectedPriorities
     };
 }
 
 <div>
     <ul class="pagination justify-content-center">
 
-        @if (Model.outputModel.CurrentPage == 1)
+        @if (Model.OutputModel.CurrentPage == 1)
         {
             <li class="page-item disabled">
                 <a class="page-link" href="#">&laquo;</a>
             </li>
         }
-        else if (Model.outputModel.CurrentPage > 1)
+        else if (Model.OutputModel.CurrentPage > 1)
         {
             <li class="page-item">
                 <a class="page-link" href="@Url.Page("MyCases", parameters)&pageNumber=1">&laquo;</a>
@@ -37,12 +37,12 @@
 
         @{
             // -5 and +5 so it can show 5 pages before and 5 pages ahead (if available) of the current one
-            int firstPageToShow = Model.outputModel.CurrentPage - 5 < 1 ? 1 : Model.outputModel.CurrentPage - 5;
-            int lastPageToShow = Model.outputModel.CurrentPage + 5 > Model.outputModel.LastPage ? Model.outputModel.LastPage : Model.outputModel.CurrentPage + 5;
+            int firstPageToShow = Model.OutputModel.CurrentPage - 5 < 1 ? 1 : Model.OutputModel.CurrentPage - 5;
+            int lastPageToShow = Model.OutputModel.CurrentPage + 5 > Model.OutputModel.LastPage ? Model.OutputModel.LastPage : Model.OutputModel.CurrentPage + 5;
 
             for (int i = firstPageToShow; i <= lastPageToShow; i++)
             {
-                if (Model.outputModel.CurrentPage == i)
+                if (Model.OutputModel.CurrentPage == i)
                 {
                     <li class="page-item active">
                         <a class="page-link" href="#">@i</a>
@@ -57,13 +57,13 @@
             }
         }
 
-        @if (Model.outputModel.CurrentPage < Model.outputModel.LastPage)
+        @if (Model.OutputModel.CurrentPage < Model.OutputModel.LastPage)
         {
             <li class="page-item">
-                <a class="page-link" href="@Url.Page("MyCases", parameters)&pageNumber=@Model.outputModel.LastPage">&raquo;</a>
+                <a class="page-link" href="@Url.Page("MyCases", parameters)&pageNumber=@Model.OutputModel.LastPage">&raquo;</a>
             </li>
         }
-        else if (Model.outputModel.AllCases > 0)
+        else if (Model.OutputModel.AllCases > 0)
         {
             <li class="page-item disabled">
                 <a class="page-link" href="#">&raquo;</a>
