--- a/CaseManagement/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/CaseManagement/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -11,7 +11,7 @@
             <li id="external-logins" class="nav-item"><a id="external-login" class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)" asp-page="./ExternalLogins">External logins</a></li>
         }
         @*<li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)" id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>*@
-        <li class="nav-item"><a class="nav-link @ManageNavPages.MyCasesNavClass(ViewContext)" id="my-cases" asp-page="./MyCases">My cases</a></li>
+        @*<li class="nav-item"><a class="nav-link @ManageNavPages.MyCasesNavClass(ViewContext)" id="my-cases" asp-page="./MyCases">My cases</a></li>*@
         <li class="nav-item"><a class="nav-link @ManageNavPages.MyStatisticsNavClass(ViewContext)" id="my-statistics" asp-page="./MyStatistics">My statistics</a></li>
         @if (this.User.IsInRole("Lead"))
         {
