--- a/CaseManagement/Views/Cases/Index.cshtml
+++ b/CaseManagement/Views/Cases/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CaseManagement.ViewModels.Cases.Output.AllCasesOutputModel
+﻿@model CaseManagement.ViewModels.Cases.Index.CasesIndexViewModel
 
 @if (Model.Announcements?.Length > 0)
 {
@@ -13,7 +13,6 @@
     <section>
         <h4>Cases</h4>
         <hr />
-        <a class="btn btn-primary" asp-controller="Cases" asp-action="Create">Create Case</a>
         <form asp-controller="Cases" asp-action="SearchCase" id="search-case" method="get" class="m-5">
             <div class="row mx-auto">
                 <div class="form-group mx-auto my-auto">
@@ -27,7 +26,7 @@
     </section>
 </div>
 
-<partial name="CasesTablePartial" model="Model" />
+<partial name="CasesTablePartial" model="@Model" />
 
 @* pagination *@
 @{
@@ -35,7 +34,7 @@
     // Note that, when this is used the page number is also passed after it in the format: &pageNumber=X
     var parameters = new
     {
-        orderBy = Model.OrderedBy,
+        orderedBy = Model.OrderedBy,
         selectedStatuses = Model.SelectedStatuses,
         selectedPriorities = Model.SelectedPriorities
     };
@@ -44,13 +43,13 @@
 <div>
     <ul class="pagination justify-content-center">
 
-        @if (Model.CurrentPage == 1)
+        @if (Model.PageNumber == 1 && Model.CasesCount > 0)
         {
             <li class="page-item disabled">
                 <a class="page-link" href="#">&laquo;</a>
             </li>
         }
-        else if (Model.CurrentPage > 1)
+        else if (Model.PageNumber > 1)
         {
             <li class="page-item">
                 <a class="page-link" href="@Url.Action("Index", parameters)&pageNumber=1">&laquo;</a>
@@ -59,12 +58,12 @@
 
         @{
             // -5 and +5 so it can show 5 pages before and 5 pages ahead (if available) of the current one
-            int firstPageToShow = Model.CurrentPage - 5 < 1 ? 1 : Model.CurrentPage - 5;
-            int lastPageToShow = Model.CurrentPage + 5 > Model.LastPage ? Model.LastPage : Model.CurrentPage + 5;
+            int firstPageToShow = Model.PageNumber - 5 < 1 ? 1 : Model.PageNumber - 5;
+            int lastPageToShow = Model.PageNumber + 5 > Model.LastPage ? Model.LastPage : Model.PageNumber + 5;
 
             for (int i = firstPageToShow; i <= lastPageToShow; i++)
             {
-                if (Model.CurrentPage == i)
+                if (Model.PageNumber == i)
                 {
                     <li class="page-item active">
                         <a class="page-link" href="#">@i</a>
@@ -79,13 +78,13 @@
             }
         }
 
-        @if (Model.CurrentPage < Model.LastPage)
+        @if (Model.PageNumber < Model.LastPage)
         {
             <li class="page-item">
                 <a class="page-link" href="@Url.Action("Index", parameters)&pageNumber=@Model.LastPage">&raquo;</a>
             </li>
         }
-        else if (Model.AllCases > 0)
+        else if (Model.CasesCount > 0)
         {
             <li class="page-item disabled">
                 <a class="page-link" href="#">&raquo;</a>
@@ -100,23 +99,4 @@
     <partial name="_ValidationScriptsPartial" />
     <script src="~/js/marquee3k.js"></script>
     <script>Marquee3k.init();</script>
-    <script>
-        let orderAndFilterModal = document.getElementById("orderAndFilterModal");
-
-        let orderAndFilterBtn = document.getElementById("orderAndFilterBtn");
-        orderAndFilterBtn.addEventListener("click", openModal);
-
-        let closeModalBtns = document.getElementsByClassName("closeModalBtn");
-        for (closeModalBtn of closeModalBtns) {
-            closeModalBtn.addEventListener("click", closeModal);
-        }
-
-        function openModal(e) {
-            orderAndFilterModal.classList.add("d-block");
-        }
-
-        function closeModal(e) {
-            orderAndFilterModal.classList.remove("d-block");
-        }
-    </script>
 }
