--- a/CaseManagement/Views/Cases/SearchCaseResults.cshtml
+++ b/CaseManagement/Views/Cases/SearchCaseResults.cshtml
@@ -1,4 +1,4 @@
-﻿@model CaseManagement.ViewModels.Cases.Output.SearchCaseResultsOutputModel
+﻿@model CaseManagement.ViewModels.Cases.CaseViewModel
 
 <div class="col-md-4 mx-auto text-center mt-5">
     <section>
@@ -8,7 +8,7 @@
         <form asp-action="SearchCase" id="search-case" method="get" class="m-5">
             <div class="row mx-auto">
                 <div class="form-group mx-auto my-auto">
-                    <input name="caseNumber" asp-for="SearchedCaseNumber" placeholder="Case number" class="form-control" />
+                    <input name="caseNumber" asp-for="@Model.Number" placeholder="Case number" class="form-control" />
                 </div>
                 <div class="form-group mx-auto my-auto">
                     <button type="submit" class="btn btn-success">SEARCH</button>
@@ -22,40 +22,56 @@
     <table class="table table-hover border">
         <thead>
             <tr class="table-active">
-                <th scope="col">Created on</th>
+
+                <th scope="col">Last updated (UTC)</th>
+                <th scope="col">Last updated (IST)</th>
                 <th scope="col">Case number</th>
                 <th scope="col">Subject</th>
                 <th scope="col">Status</th>
                 <th scope="col">Priority</th>
-                <th scope="col">Agent</th>
+                <th scope="col">Waiting reason</th>
+                <th scope="col">Processor</th>
+                <th scope="col">Changed by</th>
+                <th scope="col">Resume at (UTC)</th>
+                <th scope="col">Notes</th>
                 <th scope="col"></th>
             </tr>
         </thead>
         <tbody>
-
-            @foreach (var caseModel in Model.Results)
-            {
-                <tr>
-                    <td>@caseModel.CreatedOn</td>
-                    <td>@caseModel.Number</td>
-                    <td>@caseModel.Subject</td>
-                    <td>@caseModel.Status</td>
-                    <td>@caseModel.Priority</td>
-                    <td>@caseModel.Agent</td>
-                    <td><a class="btn btn-dark p-1" asp-controller="Cases" asp-action="ViewUpdate" asp-route-id="@caseModel.Id">VIEW/UPDATE</a></td>
-                </tr>
-            }
-
+            <tr>
+                @if (Model != null)
+                {
+                    <td>@Model.LastUpdatedUtc</td>
+                    <td>@Model.LastUpdatedIst</td>
+                    <td>@Model.Number</td>
+                    <td>@Model.Subject</td>
+                    <td>@Model.Status</td>
+                    <td>@Model.Priority</td>
+                    <td>@Model.WaitingReason</td>
+                    <td>@Model.AssignedProcessor</td>
+                    <td>@Model.ChangedByUser</td>
+                    <td>@Model.ResumeAtUtc</td>
+                    <td>
+                        @if (!string.IsNullOrWhiteSpace(Model.Notes))
+                        {
+                            <button type="button" class="btn btn-link btn-sm" data-container="body" data-toggle="popover" data-placement="left" data-content="@Model.Notes">See notes</button>
+                        }
+                    </td>
+                    <td><a class="btn btn-dark p-1" asp-controller="Cases" asp-action="ViewUpdate" asp-route-id="@Model.Id">VIEW/UPDATE</a></td>
+                }
+            </tr>
         </tbody>
     </table>
-
-    @if (Model.Results.Length == 0)
+    @if (Model == null)
     {
-        <h6>No cases available.</h6>
+        <h6>Case not found.</h6>
     }
-
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <partial name="PopoverHandlerJsPartial" />
+    <script>
+        handlePopover();
+    </script>
 }
