--- a/CaseManagement/Views/Tasks/Create.cshtml
+++ b/CaseManagement/Views/Tasks/Create.cshtml
@@ -1,59 +1,105 @@
-﻿@model CaseManagement.ViewModels.Tasks.Input.CreateTaskInputModel
+﻿@model CaseManagement.ViewModels.Tasks.Create.TaskCreateViewModel
 
 <div class="row mt-5">
     <div class="col-12 mx-auto text-center">
         <section>
             <div class="col-4 mx-auto text-center">
-                <h4>Create Task</h4>
+                <h4>ADD TASK</h4>
                 <hr />
-                </div>
-                <form method="post">
-                    <div class="row">
-                        <div class="form-group col-4">
-                            <label>Type</label>
-                            <select asp-for="TypeId" class="form-control">
-                                <option value="">Select type</option>
-
-                                @foreach (var type in Model.TaskTypes)
-                                {
-                                    <option value="@type.Id">@type.Type</option>
-                                }
-
-                            </select>
-                            <span asp-validation-for="TypeId" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-4">
-                            <label>Status</label>
-                            <select asp-for="StatusId" class="form-control">
-                                <option value="">Select status</option>
-
-                                @foreach (var status in Model.TaskStatuses)
-                                {
-                                    <option value="@status.Id">@status.Status</option>
-                                }
-
-                            </select>
-                            <span asp-validation-for="StatusId" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-4">
-                            <label>Action*</label>
-                            <input id="action" asp-for="Action" type="text" placeholder="Required field" class="form-control" />
-                            <span asp-validation-for="Action" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-4">
-                            <label>Next action*</label>
-                            <input id="next-action" asp-for="NextAction" placeholder="Required field" class="form-control" />
-                            <span asp-validation-for="NextAction" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-4">
-                            <label>Comments</label>
-                            <textarea id="comments" asp-for="Comments" class="form-control" rows="11"></textarea>
-                            <span asp-validation-for="Comments" class="text-danger"></span>
-                        </div>
+            </div>
+            <form method="post">
+                <div class="row">
+                    <div class="form-group col-3">
+                        <label>Case number</label>
+                        <input asp-for="@Model.CaseNumber" class="form-control" disabled />
                     </div>
-                    <button type="submit" class="btn btn-outline-info mr-5">CREATE</button>
-                    <button id="copy-to-clipboard-btn" type="button" class="btn btn-outline-warning ml-5">COPY TO CLIPBOARD</button>
-                </form>
+                    <div class="form-group col-3">
+                        <label>Priority*</label>
+                        <select asp-for="@Model.SelectedPriorityId" class="form-control">
+                            <option value="">Select priority</option>
+                            @foreach (var priority in Model.AllPriorities)
+                            {
+                                <option value="@priority.Id">@priority.CasePriorityName</option>
+                            }
+                        </select>
+                        <span asp-validation-for="@Model.SelectedPriorityId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Subject</label>
+                        <input asp-for="@Model.Subject" class="form-control" />
+                        <span asp-validation-for="@Model.Subject" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Status*</label>
+                        <select asp-for="@Model.SelectedStatusId" class="form-control">
+                            <option value="">Select status</option>
+                            @foreach (var status in Model.AllStatuses)
+                            {
+                                <option value="@status.Id">@status.CaseStatusName</option>
+                            }
+                        </select>
+                        <span asp-validation-for="@Model.SelectedStatusId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Waiting reason</label>
+                        <select asp-for="@Model.SelectedWaitingReasonId" class="form-control">
+                            <option value="">Select waiting reason</option>
+                            @foreach (var waitingReason in Model.AllWaitingReasons)
+                            {
+                                <option value="@waitingReason.Id">@waitingReason.WaitingReasonName</option>
+                            }
+                        </select>
+                        <span asp-validation-for="@Model.SelectedWaitingReasonId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Type*</label>
+                        <select asp-for="@Model.SelectedTypeId" class="form-control">
+                            <option value="">Select type</option>
+                            @foreach (var type in Model.AllTypes)
+                            {
+                                <option value="@type.Id">@type.CaseTypeName</option>
+                            }
+                        </select>
+                        <span asp-validation-for="@Model.SelectedTypeId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Queue</label>
+                        <input asp-for="@Model.Queue" class="form-control" />
+                        <span asp-validation-for="@Model.Queue" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Queue status</label>
+                        <select asp-for="@Model.SelectedQueueStatusId" class="form-control">
+                            <option value="">Select queue status</option>
+                            @foreach (var queueStatus in Model.AllQueueStatuses)
+                            {
+                                <option value="@queueStatus.Id">@queueStatus.QueueStatusName</option>
+                            }
+                        </select>
+                        <span asp-validation-for="@Model.SelectedQueueStatusId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Reported at (UTC)</label>
+                        <input asp-for="@Model.ReportedAt" class="form-control" disabled/>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Resume at</label>
+                        <input asp-for="@Model.ResumeAt" class="form-control" />
+                        <span asp-validation-for="@Model.ResumeAt" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-3">
+                        <label>Assigned processor</label>
+                        <input asp-for="@Model.AssignedProcessor" class="form-control" />
+                    </div>
+                    <div class="form-group col-6 mx-auto">
+                        <label>Notes</label>
+                        <textarea asp-for="@Model.Notes" class="form-control" rows="9"></textarea>
+                        <span asp-validation-for="@Model.Notes" class="text-danger"></span>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-outline-info mr-5">ADD TASK</button>
+                <button id="copy-to-clipboard-btn" type="button" class="btn btn-outline-warning ml-5">COPY TO CLIPBOARD</button>
+            </form>
         </section>
     </div>
 </div>
