--- a/CaseManagement/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/CaseManagement/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -25,6 +25,11 @@
                 <input asp-for="Input.LastName" class="form-control" />
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.CUser"></label>
+                <input asp-for="Input.CUser" class="form-control" />
+                <span asp-validation-for="Input.CUser" class="text-danger"></span>
+            </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
