Add logging for agents availability and skills changes

--- a/CaseManagement/Views/AgentAssignment/Index.cshtml
+++ b/CaseManagement/Views/AgentAssignment/Index.cshtml
@@ -38,56 +38,56 @@
                     <th scope="row">@Model.AgentsAvailabilityAndSkills[i].FullName</th>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-available" asp-for="@Model.AgentsAvailabilityAndSkills[i].IsAvailable">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-available"></label>
+                            <input type="checkbox" class="custom-control-input" id="available-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].IsAvailable">
+                            <label class="custom-control-label" for="available-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-ttes12" asp-for="@Model.AgentsAvailabilityAndSkills[i].TTES12">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-ttes12"></label>
+                            <input type="checkbox" class="custom-control-input" id="ttes12-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].TTES12">
+                            <label class="custom-control-label" for="ttes12-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-ttes34" asp-for="@Model.AgentsAvailabilityAndSkills[i].TTES34">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-ttes34"></label>
+                            <input type="checkbox" class="custom-control-input" id="ttes34-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].TTES34">
+                            <label class="custom-control-label" for="ttes34-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-rtpu12" asp-for="@Model.AgentsAvailabilityAndSkills[i].RTPU12">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-rtpu12"></label>
+                            <input type="checkbox" class="custom-control-input" id="rtpu12-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].RTPU12">
+                            <label class="custom-control-label" for="rtpu12-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-rtpu34" asp-for="@Model.AgentsAvailabilityAndSkills[i].RTPU34">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-rtpu34"></label>
+                            <input type="checkbox" class="custom-control-input" id="rtpu34-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].RTPU34">
+                            <label class="custom-control-label" for="rtpu34-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-ex12" asp-for="@Model.AgentsAvailabilityAndSkills[i].EX12">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-ex12"></label>
+                            <input type="checkbox" class="custom-control-input" id="ex12-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].EX12">
+                            <label class="custom-control-label" for="ex12-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-ex34" asp-for="@Model.AgentsAvailabilityAndSkills[i].EX34">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-ex34"></label>
+                            <input type="checkbox" class="custom-control-input" id="ex34-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].EX34">
+                            <label class="custom-control-label" for="ex34-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-other12" asp-for="@Model.AgentsAvailabilityAndSkills[i].Other12">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-other12"></label>
+                            <input type="checkbox" class="custom-control-input" id="other12-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].Other12">
+                            <label class="custom-control-label" for="other12-@i"></label>
                         </div>
                     </td>
                     <td>
                         <div class="custom-control custom-checkbox">
-                            <input type="checkbox" class="custom-control-input" id="@Model.AgentsAvailabilityAndSkills[i].CUser-other34" asp-for="@Model.AgentsAvailabilityAndSkills[i].Other34">
-                            <label class="custom-control-label" for="@Model.AgentsAvailabilityAndSkills[i].CUser-other34"></label>
+                            <input type="checkbox" class="custom-control-input" id="other34-@i" asp-for="@Model.AgentsAvailabilityAndSkills[i].Other34">
+                            <label class="custom-control-label" for="other34-@i"></label>
                         </div>
                     </td>
                 </tr>
