--- a/CaseManagement/Views/Shared/_LoginPartial.cshtml
+++ b/CaseManagement/Views/Shared/_LoginPartial.cshtml
@@ -23,9 +23,9 @@
         <li class="nav-item">
             <a class="nav-link" asp-controller="DatacentersTimes" asp-action="Index">DC TIMES</a>
         </li>
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link" asp-area="" asp-controller="Monitoring" asp-action="Index">MONITORING</a>
-        </li>
+        </li>*@
         <li class="nav-item">
             <a class="nav-link" asp-area="" asp-controller="AgentAssignment" asp-action="Index">AGENT ASSIGNMENT</a>
         </li>
