--- a/CaseManagement/Views/Shared/_LoginPartial.cshtml
+++ b/CaseManagement/Views/Shared/_LoginPartial.cshtml
@@ -24,10 +24,13 @@
             <a class="nav-link" asp-controller="DatacentersTimes" asp-action="Index">DC TIMES</a>
         </li>
         @*<li class="nav-item">
-            <a class="nav-link" asp-area="" asp-controller="Monitoring" asp-action="Index">MONITORING</a>
+                <a class="nav-link" asp-area="" asp-controller="Monitoring" asp-action="Index">MONITORING</a>
+            </li>*@
+        @*<li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="AgentAssignment" asp-action="Index">AGENT ASSIGNMENT</a>
         </li>*@
         <li class="nav-item">
-            <a class="nav-link" asp-area="" asp-controller="AgentAssignment" asp-action="Index">AGENT ASSIGNMENT</a>
+            <a class="nav-link" asp-area="" asp-controller="SpcAgentAssignment" asp-action="Index">SPC AGENT ASSIGNMENT</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
