--- a/CaseManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CaseManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,11 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.CUser"></label>
+                <input asp-for="Input.CUser" class="form-control" />
+                <span asp-validation-for="Input.CUser" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.FirstName"></label>
                 <input asp-for="Input.FirstName" class="form-control" />
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
