--- a/CaseManagement/Views/Shared/_LoginPartial.cshtml
+++ b/CaseManagement/Views/Shared/_LoginPartial.cshtml
@@ -6,33 +6,33 @@
 
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">WELCOME @User.Identity.Name!</a>
+        <li class="nav-item mr-2">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">MY ACCOUNT (@User.Identity.Name)</a>
         </li>
 
         if (User.IsInRole("Lead"))
         {
-            <li class="nav-item">
-                <a class="nav-link" asp-controller="StatisticsAndReports" asp-action="RegisteredAgents">REPORTS</a>
+            <li class="nav-item mr-2">
+                <a class="nav-link" asp-controller="StatisticsAndReports" asp-action="RegisteredAgents">ADMIN</a>
             </li>
         }
 
-        <li class="nav-item">
+        <li class="nav-item mr-2">
             <a class="nav-link" asp-controller="Cases" asp-action="Index">CASES</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-2">
             <a class="nav-link" asp-controller="DatacentersTimes" asp-action="Index">DC TIMES</a>
         </li>
-        @*<li class="nav-item">
+        @*<li class="nav-item mr-2">
                 <a class="nav-link" asp-area="" asp-controller="Monitoring" asp-action="Index">MONITORING</a>
             </li>*@
-        @*<li class="nav-item">
-            <a class="nav-link" asp-area="" asp-controller="AgentAssignment" asp-action="Index">AGENT ASSIGNMENT</a>
-        </li>*@
-        <li class="nav-item">
+        @*<li class="nav-item mr-2">
+                <a class="nav-link" asp-area="" asp-controller="AgentAssignment" asp-action="Index">AGENT ASSIGNMENT</a>
+            </li>*@
+        <li class="nav-item mr-2">
             <a class="nav-link" asp-area="" asp-controller="SpcAgentAssignment" asp-action="Index">SPC AGENT ASSIGNMENT</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-2">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link btn-lg">LOGOUT</button>
             </form>
@@ -40,10 +40,10 @@
     }
     else
     {
-        <li class="nav-item">
+        <li class="nav-item mr-2">
             <a class="nav-link" asp-controller="Home" asp-action="Index">LOG IN</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item mr-2">
             <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">REGISTER</a>
         </li>
     }
